Fix overflow and hamburger menu position

--- a/src/components/drawer.css
+++ b/src/components/drawer.css
@@ -7,8 +7,8 @@ body {
   position: absolute;
   width: 24px;
   height: 20px;
-  left: 42px;
-  top: 50px;
+  left: 20px;
+  top: 40px;
 }
 
 .bm-burger-bars {
